--- a/src/main/webapp/public/resources/themes/pwm/configStyle.css
+++ b/src/main/webapp/public/resources/themes/pwm/configStyle.css
@@ -162,7 +162,7 @@ html {
 }
 
 .changeLogKey {
-    background-color: #aa1e08;
+    background-color: #777;
     color: white;
     font-weight: bold;
 }
