Migrated person detail modal dialog to angular.

--- a/src/main/angular/src/ux/icon.component.scss
+++ b/src/main/angular/src/ux/icon.component.scss
@@ -9,9 +9,9 @@ mf-icon {
   > i {
     color: inherit;
     position: absolute;
-    text-align: center;
+    left: 50%;
     top: 50%;
-    transform: translateY(-50%);
+    transform: translate(-50%, -50%);
     width: 100%;
 
     &:before {
