--- a/src/main/angular/src/peoplesearch/peoplesearch.scss
+++ b/src/main/angular/src/peoplesearch/peoplesearch.scss
@@ -26,12 +26,20 @@ body {
   mf-search-bar {
     margin: 10px 0;
   }
+
+  .search-info {
+    text-align: center;
+  }
 }
 
 @media (min-width: 454px) {
   .people-search-component {
     mf-search-bar {
       width: 444px;
+    }
+
+    .search-info {
+      text-align: left;
     }
   }
 }
