--- a/src/main/angular/src/peoplesearch/peoplesearch-cards.component.html
+++ b/src/main/angular/src/peoplesearch/peoplesearch-cards.component.html
@@ -6,11 +6,11 @@
 </mf-app-bar>
 
 <mf-search-bar search-text="$ctrl.query" auto-focus></mf-search-bar>
-<p ng-if="$ctrl.showNoResults()">No Results</p>
+<div class="search-info" ng-if="$ctrl.searchMessage" ng-bind="$ctrl.searchMessage"></div>
 
 <div class="person-card-list">
     <person-card person="person"
-                 ng-repeat="person in $ctrl.people"
+                 ng-repeat="person in $ctrl.searchResult.people"
                  ng-click="$ctrl.selectPerson(person)">
     </person-card>
 </div>
