--- a/src/main/angular/src/peoplesearch/orgchart-search.component.scss
+++ b/src/main/angular/src/peoplesearch/orgchart-search.component.scss
@@ -2,6 +2,7 @@ org-chart-search {
   display: flex;
   flex-flow: column nowrap;
   height: 100%;
+  min-width: 260px;
   overflow-x: auto;
 
   mf-app-bar {
