--- a/src/main/angular/src/peoplesearch/peoplesearch.scss
+++ b/src/main/angular/src/peoplesearch/peoplesearch.scss
@@ -25,6 +25,7 @@ body {
 
   mf-search-bar {
     margin: 10px 0;
+    max-width: 450px;
   }
 
   .search-info {
@@ -32,12 +33,8 @@ body {
   }
 }
 
-@media (min-width: 454px) {
+@media (min-width: 460px) {
   .people-search-component {
-    mf-search-bar {
-      width: 444px;
-    }
-
     .search-info {
       text-align: left;
     }
