--- a/src/main/angular/src/ux/auto-complete.component.scss
+++ b/src/main/angular/src/ux/auto-complete.component.scss
@@ -1,9 +1,9 @@
 mf-auto-complete {
   display: block;
+  height: 21px;
   position: relative;
 
   > mf-search-bar {
-    height: 100%;
     width: 100%;
     max-width: 100%;
   }
