--- a/src/main/angular/src/peoplesearch/peoplesearch.scss
+++ b/src/main/angular/src/peoplesearch/peoplesearch.scss
@@ -23,8 +23,9 @@ body {
     overflow: auto;
   }
 
+  mf-auto-complete,
   mf-search-bar {
-    max-width: 450px;
+    margin-bottom: 10px;
   }
 
   .search-info {
@@ -33,7 +34,7 @@ body {
     color: #808080;
     display: inline-block;
     font-size: 14px;
-    margin: 10px auto;
+    margin: 0 auto 10px;
     padding: 5px;
     text-align: center;
   }
