forgotten password refactorings

--- a/src/main/angular/src/peoplesearch/peoplesearch-table.component.html
+++ b/src/main/angular/src/peoplesearch/peoplesearch-table.component.html
@@ -1,14 +1,27 @@
-<mf-app-bar>
-    <div class="page-content-title" translate="Title_PeopleSearch">People Search</div>
-    <span flex></span>
-    <mf-icon-button icon="view-grid" ng-click="$ctrl.gotoCardsView()"></mf-icon-button>
-</mf-app-bar>
-
-<mf-search-bar search-text="$ctrl.query" auto-focus></mf-search-bar>
-
-<mf-table data="person in $ctrl.people" ng-show="$ctrl.people.length" on-click-item="$ctrl.selectPerson(person)">
-    <mf-table-column ng-repeat="(key, value) in $ctrl.columnConfiguration"
-                     label="value"
-                     value="'person.' + key">
-    </mf-table-column>
-</mf-table>
+<!--<mf-table class="table-striped" data="person in $ctrl.people">-->
+    <!--<mf-table-column label="First Name" value="person.givenName"></mf-table-column>-->
+    <!--<mf-table-column label="Last Name" value="person.sn"></mf-table-column>-->
+    <!--<mf-table-column label="Title" value="person.title"></mf-table-column>-->
+    <!--<mf-table-column label="Email" value="person.mail"></mf-table-column>-->
+    <!--<mf-table-column label="Telephone" value="person.telephoneNumber"></mf-table-column>-->
+<!--</mf-table>-->
+<table st-table="rowCollection" ng-if="$ctrl.people.length" class="table table-striped">
+    <thead>
+        <tr>
+            <th>{{ 'COLUMN_FIRST_NAME' | translate }}</th>
+            <th>{{ 'COLUMN_LAST_NAME' | translate }}</th>
+            <th>{{ 'COLUMN_TITLE' | translate }}</th>
+            <th>{{ 'COLUMN_EMAIL' | translate }}</th>
+            <th>{{ 'COLUMN_TELEPHONE' | translate }}</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr ng-repeat="(key,value) in $ctrl.people.fields" ng-click="$ctrl.selectPerson(person.userKey)">
+            <td ng-repeat="(key,value) in $ctrl.people.fields">{{ value }}</td>
+            <td>{{ person.sn }}</td>
+            <td>{{ person.title }}</td>
+            <td>{{ person.mail }}</td>
+            <td>{{ person.telephoneNumber }}</td>
+        </tr>
+    </tbody>
+</table>
