--- a/src/main/angular/src/ux/search-bar.component.html
+++ b/src/main/angular/src/ux/search-bar.component.html
@@ -3,6 +3,6 @@
        ng-keydown="$ctrl.onInputKeyDown($event)"
        title="Search Box"
        autocomplete="off" />
-<span class="placeholder" ng-hide="$ctrl.searchText">{{$ctrl.placeholder || 'Search' }}</span>
+<span class="placeholder" ng-hide="$ctrl.searchText">{{$ctrl.placeholder || ('SearchLabel' | translate) }}</span>
 <mf-icon icon="close" ng-click="$ctrl.clearSearchText()"></mf-icon>
 <!-- loader graphic -->
