--- a/src/main/angular/src/peoplesearch/peoplesearch-cards.component.html
+++ b/src/main/angular/src/peoplesearch/peoplesearch-cards.component.html
@@ -6,7 +6,9 @@
     <mf-icon-button icon="orgchart" ng-click="$ctrl.gotoOrgchart()"></mf-icon-button>
 </mf-app-bar>
 
-<div class="search-info" ng-if="$ctrl.searchMessage" ng-bind="$ctrl.searchMessage"></div>
+<div class="search-info"
+     ng-if="$ctrl.loading || $ctrl.searchMessage"
+     ng-bind="$ctrl.loading ? ('Display_PleaseWait' | translate) : $ctrl.searchMessage"></div>
 
 <div class="person-card-list">
     <person-card person="person"
