--- a/src/main/angular/src/peoplesearch/peoplesearch-table.component.html
+++ b/src/main/angular/src/peoplesearch/peoplesearch-table.component.html
@@ -6,7 +6,9 @@
     <mf-icon-button icon="orgchart" ng-click="$ctrl.gotoOrgchart()"></mf-icon-button>
 </mf-app-bar>
 
-<div class="search-info" ng-if="$ctrl.searchMessage" ng-bind="$ctrl.searchMessage"></div>
+<div class="search-info"
+     ng-if="$ctrl.loading || $ctrl.searchMessage"
+     ng-bind="$ctrl.loading ? ('Display_PleaseWait' | translate) : $ctrl.searchMessage"></div>
 
 <mf-table data="person in $ctrl.searchResult.people" ng-show="$ctrl.searchResult.people.length" on-click-item="$ctrl.selectPerson(person)">
     <mf-table-column ng-repeat="(key, value) in $ctrl.columnConfiguration"
