--- a/src/main/angular/src/ux/search-bar.component.html
+++ b/src/main/angular/src/ux/search-bar.component.html
@@ -5,6 +5,10 @@
        ng-trim="false"
        title="Search Box"
        autocomplete="off" />
-<span class="placeholder" ng-hide="$ctrl.searchText.length">{{$ctrl.placeholder || ('SearchLabel' | translate) }}</span>
+<span class="placeholder"
+      ng-hide="$ctrl.searchText.length"
+      ng-bind="$ctrl.placeholder || ('Placeholder_Search' | translate)">
+    Search
+</span>
 <mf-icon class="clear-input" icon="close" ng-click="$ctrl.clearSearchText()"></mf-icon>
 <!-- loader graphic -->
