--- a/src/main/angular/src/ux/auto-complete.component.scss
+++ b/src/main/angular/src/ux/auto-complete.component.scss
@@ -63,6 +63,11 @@ mf-auto-complete {
         background-color: #eef2f2;
       }
 
+      &.search-message {
+        color: #808080;
+        text-align: center;
+      }
+
       &.selected {
         background-color: #dae1e1;
       }
