--- a/src/main/angular/src/peoplesearch/orgchart-search.component.html
+++ b/src/main/angular/src/peoplesearch/orgchart-search.component.html
@@ -8,8 +8,14 @@
         </content-template>
     </mf-auto-complete>
     <span flex></span>
-    <mf-icon-button icon="view-tile" ng-click="$ctrl.gotoSearchState('search.cards')"></mf-icon-button>
-    <mf-icon-button icon="view-list" ng-click="$ctrl.gotoSearchState('search.table')"></mf-icon-button>
+    <mf-icon-button
+            icon="view-tile"
+            ng-click="$ctrl.gotoSearchState('search.cards')"
+            ng-attr-title="{{ 'Title_PeopleSearch' | translate }}"></mf-icon-button>
+    <mf-icon-button
+            icon="view-list"
+            ng-click="$ctrl.gotoSearchState('search.table')"
+            ng-attr-title="{{ 'Title_PeopleSearch' | translate }}"></mf-icon-button>
 </mf-app-bar>
 
 <org-chart person="$ctrl.person"
