--- a/src/main/angular/src/peoplesearch/person-details-dialog.component.scss
+++ b/src/main/angular/src/peoplesearch/person-details-dialog.component.scss
@@ -77,8 +77,10 @@
                     height: 16px;
                     width: 16px;
 
-                    > mf-icon {
-                      font-size: 16px;
+                    > button {
+                      > mf-icon {
+                        font-size: 16px;
+                      }
                     }
                   }
                 }
