--- a/src/main/angular/src/peoplesearch/person-details-dialog.component.html
+++ b/src/main/angular/src/peoplesearch/person-details-dialog.component.html
@@ -3,7 +3,10 @@
         <div class="page-content-title" translate="Title_Details">Details</div>
     </mf-app-bar>
     <div class="mf-dialog-content">
-        <person-card size="medium" person="$ctrl.person"></person-card>
+        <person-card size="medium"
+                     person="$ctrl.person"
+                     disable-focus="true"
+                     show-direct-report-count="false"></person-card>
         <mf-button type="button" ng-click="$ctrl.gotoOrgChart()">
             <mf-icon icon="orgchart"></mf-icon>
             <span translate="Title_OrgChart">Organizational Chart</span>
