--- a/src/main/angular/src/ux/table.directive.scss
+++ b/src/main/angular/src/ux/table.directive.scss
@@ -42,6 +42,7 @@ mf-table {
       margin: 0;
       padding: 10px;
       position: absolute;
+      text-align: left;
       top: 0;
 
       > li {
