Details view added to OrgChartComponent

--- a/src/main/angular/src/peoplesearch/orgchart-search.component.html
+++ b/src/main/angular/src/peoplesearch/orgchart-search.component.html
@@ -22,3 +22,5 @@
            direct-reports="$ctrl.directReports"
            management-chain="$ctrl.managementChain">
 </org-chart>
+
+<ui-view></ui-view>
