SearchBarComponent search icon cursor changed back to default. Tab support on 'x' IconButton

--- a/src/main/angular/src/ux/icon-button.component.scss
+++ b/src/main/angular/src/ux/icon-button.component.scss
@@ -44,6 +44,7 @@ mf-icon-button {
     border: 1px solid transparent;
     border-radius: 2px;
     color: inherit;
+    cursor: inherit;
     display: block;
     height: 100%;
     padding: 0;
