--- a/src/main/angular/src/ux/search-bar.component.html
+++ b/src/main/angular/src/ux/search-bar.component.html
@@ -6,5 +6,5 @@
        ng-attr-placeholder="{{ ('Placeholder_Search' | translate) }}"
        title="Search Box"
        autocomplete="off" />
-<mf-icon class="clear-input" icon="close" ng-click="$ctrl.clearSearchText()"></mf-icon>
+<mf-icon-button class="clear-input" icon="close" ng-click="$ctrl.clearSearchText()"></mf-icon-button>
 <!-- loader graphic -->
