--- a/src/main/angular/src/ux/app-bar.component.scss
+++ b/src/main/angular/src/ux/app-bar.component.scss
@@ -27,6 +27,26 @@ mf-app-bar {
   display: block;
   min-height: $mf-app-bar-height;
 
+  // For larger displays, place the search bar inline
+  &.large {
+    > .mf-app-bar-content {
+      > mf-auto-complete,
+      > mf-search-bar {
+        margin: 2px 10px 2px 0;
+        max-width: 320px;
+        flex: 1 1 255px;
+        order: initial;
+        width: auto;
+      }
+
+      > mf-icon-button,
+      > span[flex],
+      > .page-content-title {
+        order: initial;
+      }
+    }
+  }
+
   > .mf-app-bar-content {
     display: flex;
     flex-flow: row wrap;
@@ -51,33 +71,6 @@ mf-app-bar {
       line-height: $mf-app-bar-height;
       margin-right: 10px;
       order: 0;
-    }
-  }
-}
-
-@media (min-width: 425px) {
-  mf-app-bar {
-    > .mf-app-bar-content {
-      > mf-auto-complete,
-      > mf-search-bar {
-        margin: 2px 10px 2px 0;
-        max-width: 320px;
-        flex: 1 1 255px;
-        order: initial;
-        width: auto;
-      }
-
-      > mf-icon-button {
-        order: initial;
-      }
-
-      > span[flex] {
-        order: initial;
-      }
-
-      > .page-content-title {
-        order: initial;
-      }
     }
   }
 }
