--- a/src/main/angular/src/ux/search-bar.component.scss
+++ b/src/main/angular/src/ux/search-bar.component.scss
@@ -35,7 +35,7 @@ mf-search-bar {
     flex: 1 1 100%;
     height: 100%;
     line-height: 100%;
-    padding: 0 0 0 20px;
+    padding: 0 20px;
     width: 100%;
   }
 
