Clear search bar when text includes only spaces worked for autocomplete, not for plain search bar

--- a/src/main/angular/src/ux/auto-complete.component.html
+++ b/src/main/angular/src/ux/auto-complete.component.html
@@ -1,5 +1,5 @@
 <mf-search-bar search-text="$ctrl.query"
-               ng-keydown="$ctrl.onInputKeyDown($event)"
-               ng-focus="$ctrl.onInputFocus()"
+               ng-keydown="$ctrl.onSearchBarKeyDown($event)"
+               ng-focus="$ctrl.onSearchBarFocus()"
                auto-focus></mf-search-bar>
 <ng-transclude></ng-transclude>
