Debounce ng-model binding in SearchBarComponent to prevent unneeded requests to the server.

--- a/src/main/angular/src/ux/search-bar.component.html
+++ b/src/main/angular/src/ux/search-bar.component.html
@@ -4,6 +4,7 @@
        ng-focus="$ctrl.onFocus({ $event: $event })"
        ng-keydown="$ctrl.onKeyDown({ $event: $event })"
        ng-model="$ctrl.searchText"
+       ng-model-options="{ debounce: 300 }"
        ng-attr-placeholder="{{ ('Placeholder_Search' | translate) }}"
        title="Search Box"
        autocomplete="off" />
